修改點擊樣式

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -331,6 +331,8 @@
       border: solid 1px $topic_color;
       color: $text_color;
       font-weight: bold;
+      cursor: pointer;
+
       &:hover {
         background-color: $topic_color;
       }
